.metadata/.plugins/org.eclipse.cdt.ui/trying.build.log
20:23:25 **** Incremental Build of configuration Debug for project trying ****
make all 
Building file: ../src/GPIO_prgram.c
Invoking: Cross ARM GNU C Compiler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F10X_MD -DUSE_STDPERIPH_DRIVER -DHSE_VALUE=8000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f1-stdperiph" -std=gnu11 -MMD -MP -MF"src/GPIO_prgram.d" -MT"src/GPIO_prgram.o" -c -o "src/GPIO_prgram.o" "../src/GPIO_prgram.c"
In file included from ../src/GPIO_prgram.c:13:0:
../include/GPIO_interface.h:63:33: error: unknown type name 'u8'
 void MGPIO_voidSetPortDirection(u8 copy_u8PORT,u8 copy_u8Mode);
                                 ^~
../include/GPIO_interface.h:63:48: error: unknown type name 'u8'
 void MGPIO_voidSetPortDirection(u8 copy_u8PORT,u8 copy_u8Mode);
                                                ^~
../include/GPIO_interface.h:65:29: error: unknown type name 'u8'
 void MGPIO_voidSetPortValue(u8 copy_u8PORT, u8 copy_u8Value);
                             ^~
../include/GPIO_interface.h:65:45: error: unknown type name 'u8'
 void MGPIO_voidSetPortValue(u8 copy_u8PORT, u8 copy_u8Value);
                                             ^~
../include/GPIO_interface.h:67:32: error: unknown type name 'u8'
 void MGPIO_voidSetPinDirection(u8 copy_u8PORT,u8 copy_u8PIN,u8 copy_u8Mode);
                                ^~
../include/GPIO_interface.h:67:47: error: unknown type name 'u8'
 void MGPIO_voidSetPinDirection(u8 copy_u8PORT,u8 copy_u8PIN,u8 copy_u8Mode);
                                               ^~
../include/GPIO_interface.h:67:61: error: unknown type name 'u8'
 void MGPIO_voidSetPinDirection(u8 copy_u8PORT,u8 copy_u8PIN,u8 copy_u8Mode);
                                                             ^~
../include/GPIO_interface.h:69:28: error: unknown type name 'u8'
 void MGPIO_voidSetPinValue(u8 copy_u8PORT,u8 copy_u8PIN,u8 copy_u8Value);
                            ^~
../include/GPIO_interface.h:69:43: error: unknown type name 'u8'
 void MGPIO_voidSetPinValue(u8 copy_u8PORT,u8 copy_u8PIN,u8 copy_u8Value);
                                           ^~
../include/GPIO_interface.h:69:57: error: unknown type name 'u8'
 void MGPIO_voidSetPinValue(u8 copy_u8PORT,u8 copy_u8PIN,u8 copy_u8Value);
                                                         ^~
../include/GPIO_interface.h:71:1: error: unknown type name 'u8'
 u8 MGPIO_voidGetPinValue(u8 copy_u8PORT,u8 copy_u8PIN);
 ^~
../include/GPIO_interface.h:71:26: error: unknown type name 'u8'
 u8 MGPIO_voidGetPinValue(u8 copy_u8PORT,u8 copy_u8PIN);
                          ^~
../include/GPIO_interface.h:71:41: error: unknown type name 'u8'
 u8 MGPIO_voidGetPinValue(u8 copy_u8PORT,u8 copy_u8PIN);
                                         ^~
../src/GPIO_prgram.c:17:33: error: unknown type name 'u8'
 void MGPIO_voidSetPortDirection(u8 copy_u8PORT, u8 copy_u8Mode) {
                                 ^~
../src/GPIO_prgram.c:17:49: error: unknown type name 'u8'
 void MGPIO_voidSetPortDirection(u8 copy_u8PORT, u8 copy_u8Mode) {
                                                 ^~
../src/GPIO_prgram.c:76:32: error: unknown type name 'u8'
 void MGPIO_voidSetPinDirection(u8 copy_u8PORT, u8 copy_u8PIN, u8 copy_u8Mode) {
                                ^~
../src/GPIO_prgram.c:76:48: error: unknown type name 'u8'
 void MGPIO_voidSetPinDirection(u8 copy_u8PORT, u8 copy_u8PIN, u8 copy_u8Mode) {
                                                ^~
../src/GPIO_prgram.c:76:63: error: unknown type name 'u8'
 void MGPIO_voidSetPinDirection(u8 copy_u8PORT, u8 copy_u8PIN, u8 copy_u8Mode) {
                                                               ^~
../src/GPIO_prgram.c:127:28: error: unknown type name 'u8'
 void MGPIO_voidSetPinValue(u8 copy_u8PORT, u8 copy_u8PIN, u8 copy_u8Value) {
                            ^~
../src/GPIO_prgram.c:127:44: error: unknown type name 'u8'
 void MGPIO_voidSetPinValue(u8 copy_u8PORT, u8 copy_u8PIN, u8 copy_u8Value) {
                                            ^~
../src/GPIO_prgram.c:127:59: error: unknown type name 'u8'
 void MGPIO_voidSetPinValue(u8 copy_u8PORT, u8 copy_u8PIN, u8 copy_u8Value) {
                                                           ^~
../src/GPIO_prgram.c:157:29: error: unknown type name 'u8'
 void MGPIO_voidSetPortValue(u8 copy_u8PORT, u8 copy_u8Value) {
                             ^~
../src/GPIO_prgram.c:157:45: error: unknown type name 'u8'
 void MGPIO_voidSetPortValue(u8 copy_u8PORT, u8 copy_u8Value) {
                                             ^~
../src/GPIO_prgram.c:188:1: error: unknown type name 'u8'
 u8 MGPIO_voidGetPinValue(u8 copy_u8PORT, u8 copy_u8PIN) {
 ^~
../src/GPIO_prgram.c:188:26: error: unknown type name 'u8'
 u8 MGPIO_voidGetPinValue(u8 copy_u8PORT, u8 copy_u8PIN) {
                          ^~
../src/GPIO_prgram.c:188:42: error: unknown type name 'u8'
 u8 MGPIO_voidGetPinValue(u8 copy_u8PORT, u8 copy_u8PIN) {
                                          ^~
make: *** [src/subdir.mk:29: src/GPIO_prgram.o] Error 1

20:23:25 Build Finished (took 579ms)

